tests/ui/parser/const-block-items/inner-attr.stderr
error: an inner attribute is not permitted in this context
  --> $DIR/inner-attr.rs:7:5
   |
LL |     #![expect(unused)]
   |     ^^^^^^^^^^^^^^^^^^
...
LL | fn main() {}
   | ------------ the inner attribute doesn't annotate this function
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files
help: to annotate the function, change the attribute from inner to outer style
   |
LL -     #![expect(unused)]
LL +     #[expect(unused)]
   |

error: aborting due to 1 previous error

